--- a/ai.org
+++ b/ai.org
@@ -1,3 +1,4 @@
+- deep learning https://www.youtube.com/playlist?list=PLoROMvodv4rPOWA-omMM6STXaWW4FvJT8
 - https://github.com/AudioLLMs/AudioLLM
 - Course: zero to neural networks https://www.youtube.com/@datacorelinux/videos
 - https://microsoft.github.io/generative-ai-for-beginners/#/
