--- a/languages/rust/rust.org
+++ b/languages/rust/rust.org
@@ -11,6 +11,15 @@
 
 * Language
 
+#+begin_src rust
+  fn main() {
+      println!("Hello, World!");
+  }
+#+end_src
+
+- multiple pass compiler
+- there is no ~truthiness~ in Rust, only booleans
+- panic!() - an unrecoverable error
 - todo!()
 - unreachable!()
 - Rust, use range for loops
@@ -39,7 +48,8 @@
   use supper:**; // import all files on project
 #+end_src
 
-** format
+** string interpolation format
+see: println!() format!() panic!()
 |-------------------------------+-------------------------|
 |                           <r> |                         |
 |                 format string | description             |
@@ -55,22 +65,28 @@
 |       {var:pad align min.max} |                         |
 |-------------------------------+-------------------------|
 ** operator
-|----+---------------------------------|
-| -> | skinny arrow, on fn definitions |
-| {} | code blocks, return a value     |
-| !  | denote macro names              |
-| ?  | try operator                    |
-|----+---------------------------------|
+|-----+---------------------------------|
+| <c> |                                 |
+|-----+---------------------------------|
+| ->  | skinny arrow, on fn definitions |
+| {}  | code blocks, return a value     |
+|  !  | denote macro names              |
+|  ?  | try operator                    |
+| ==  | structural equality             |
+|-----+---------------------------------|
 ** attributes #[]
 - derive(Debug)
-** functions (;)
+** functions
+
+Expressions = something that evaluates to a value
+Statement = does NOT evaluate to a value end with a (;)
 
 #+begin_src rust
   fn beta(MyStruct {y,z,..}: MyStruct) -> i32 // struct destructuring
   fn beta() -> i32 {
-    8 // without a ";" returns "8"
-    // return 8;  // Same but less idiomatic
-    // 8;         // with the ";" it will return ()
+    8 // expression
+    // return 8;  // statement, same but less idiomatic
+    // 8;         // with the ";" it will return "()"
   }
 #+end_src
 
@@ -99,26 +115,6 @@ struct ANamed {       // "named struct"
 } // DO NOT add a semicolon after, "there is whole block of code after it"
 #+end_src
 
-*** enum
-
-- each member gets a number from 0 to 10 (can be given different numbers)
-- can be imported with ~use ENUMNAME::*~
-
-#+begin_src rust
-  enum ThingsInSky {
-      Sun,
-      Stars,
-  }
-  enum ThingsInSky {
-      Sun = 10,
-      Stars = 100,
-  }
-  enum ThingsInSky {
-      Sun(String),
-      Stars(String),
-  }
-#+end_src
-
 *** Option & Result
 
 #+begin_src rust
@@ -136,38 +132,32 @@ struct ANamed {       // "named struct"
 #+end_src
 
 *** Primitive
-- =as= is used for casting
+- =as= is used for casting (compiler allows demotion)
+  - true as u8 // = 1
+- division by zero
+  - integers = panic!
+  - floats = infinity
 - ~std::i8::MIN~ or ~i8::MIN~
 - ~std::i8::MAX~ or ~i8::MAX~
-|-------+-------+-----------------------------|
-|   <r> |   <r> |                             |
-|       |       | size                        |
-|-------+-------+-----------------------------|
-|    u8 |   1u8 |                             |
-|   uNN |       |                             |
-|   i32 | 1_000 | default literal             |
-|   i64 |     ? |                             |
-|   f32 |     ? |                             |
-|   f64 |    5. | default literal             |
-| isize |    10 | arch dep                    |
-| usize |    10 | arch dep, used for indexing |
-|  char |   'a' | up to 4 bytes               |
-|-------+-------+-----------------------------|
-*** Compound
-|---------+------------------+-------------+--------------+-------------------|
-|     <r> |              <r> |             |          <r> |                   |
-|    name |           create | access      |        match | insert            |
-|---------+------------------+-------------+--------------+-------------------|
-|   Tuple |            (5,2) | .0          |       (a,_b) |                   |
-|  struct |     SName{a: 10} | .FIELD      | SName{a, ..} |                   |
-|    enum |                  |             | ENUM::Val(a) |                   |
-| HashMap |   HashMap::new() | .get(key)   |    (key,val) | .insert(key, val) |
-|  Vector |           vec![] | [0] .get(0) |              | .push(23)         |
-|   Array |               [] |             |              |                   |
-|  String | String::from("") |             |              |                   |
-|    &str |          "asdas" |             |              |                   |
-|---------+------------------+-------------+--------------+-------------------|
-
+|---------+---------------------+----------------------------------|
+|     <r> |         <c>         |                                  |
+|    TYPE |         EX          | DESCRIPTION                      |
+|---------+---------------------+----------------------------------|
+| i/u[NN] |                     | where NN is 8,16,32,64,128       |
+|      u8 |         1u8         |                                  |
+|     i32 |        1_000        | default literal                  |
+|     i64 |          ?          |                                  |
+|---------+---------------------+----------------------------------|
+|     f32 |          ?          |                                  |
+|     f64 |         5.          | default literal                  |
+|---------+---------------------+----------------------------------|
+|   isize |         10          | arch dep size                    |
+|   usize |         10          | arch dep size, used for indexing |
+|    char |         'a'         | up to 4 bytes, same as u32       |
+|    bool |     true false      | implemented as an u8             |
+|  String | String::from("foo") | .pop()                           |
+|    &str |        "foo"        |                                  |
+|---------+---------------------+----------------------------------|
 - String
   - heap allocated
   - mutable
@@ -177,20 +167,54 @@ struct ANamed {       // "named struct"
   - immutable
   - analogous to &[u8]
   - has: ptr, len
-
+*** Compound
+|---------+----------------+-------------+--------------+-------------------+--------------------|
+|     <r> |      <c>       |     <c>     |     <c>      |        <c>        |        <c>         |
+|    name |     create     |   access    | destructure  |      insert       |        type        |
+|---------+----------------+-------------+--------------+-------------------+--------------------|
+|    unit |       ()       |     NO      |      ()      |        NO         |         ()         |
+|   tuple |     (5,2)      |     .0      |    (a,_b)    |        NO         |     (i64,i64)      |
+|  struct |  SName{a: 10}  |   .FIELD    | SName{a, ..} |        NO         | struct SN {x: i64} |
+|   array |     [1,2]      |     [0]     |   [a,_,_]    |        NO         |    [i32;LENGTH]    |
+|     Vec |   vec![1,2]    | [0] .get(0) |              |     .push(23)     |      Vec<i32>      |
+| HashMap | HashMap::new() |  .get(key)  |  (key,val)   | .insert(key, val) |                    |
+|---------+----------------+-------------+--------------+-------------------+--------------------|
+- stucts
+  - support punning on creation
+- no memory overhead for tuple/array/struct
+- unit
+  - a special case of an empty tuple
+  - come up for functions that return no values
+  - aka "void" in c
+  - sometimes used as Err(())
+*** enum
+- can be imported with ~use ENUMNAME::*~
+- each member gets a number from 0 to 10 (can be given different numbers)
+- they can optionally have a payload in the form of a record or a tuple
+|----------------------------------------+----------------------------+----------------------|
+|                                        |            <c>             |         <c>          |
+| type                                   |           create           |        match         |
+|----------------------------------------+----------------------------+----------------------|
+| enum Color { Green, Red, Blue }        |        Color::Green        |      Color::Red      |
+| enum Color { Green = 10, Blue = 20 }   |        Color::Green        |                      |
+| enum Color { Red, Custom{ r:u8,g:u8 }} | Color::Custom {r: 8, g: 2} | Color::Custom {r, g} |
+| enum Color { Red, Custom(u8,u8) }      |    Color::Custom(10,20)    |  Color::Custom(a,b)  |
+|----------------------------------------+----------------------------+----------------------|
 ** control flow
 
 #+begin_src rust
   while let Some(i) = optional {..} // alternative to loop+match
+  if foo > 1 {} else if foo < 0 {} else {} // expression
   if let MyStruct { x, .. } = foostruct {..} // if-let, non exhaustive
   loop{} // for infinite loop
   match ptr {
       Some(ptr) => ptr.g(),
       None      => {}
+      // _ => println!("catch all pattern")
   }
 #+end_src
 
-** struct + impl(ementation)
+** struct + impl(ementation) (aka methods)
 
 |-----------+-----------------|
 |       <r> |                 |
@@ -202,14 +226,15 @@ struct ANamed {       // "named struct"
 |-----------+-----------------|
 
 #+begin_src rust
-  struct Foo {
+  struct Foo { // can be an enum
         x: usize
     pub y: usize
   }
   impl Foo {
-          fn this()         //        static
-      pub fn this()         // public static
-          fn this(&self)    // instance method
+          fn new0(x: usize) -> Self // static method
+          fn this()         //        static method
+      pub fn this()         // public static method
+          fn this(&self)    //      instance method
           fn this(&mut self)
       pub fn this(self)     // takes the self itself
   }
