--- a/programming.org
+++ b/programming.org
@@ -1,3 +1,5 @@
+- parallel programming https://gfxcourses.stanford.edu/cs149/fall23/
+  - https://www.youtube.com/watch?v=V1tINV2-9p4
 - video 21: What have we lost? https://www.youtube.com/watch?v=7RNbIEJvjUA
 - video 87: Doing with Images Makes Symbols | Alan Kay
   https://www.youtube.com/watch?v=_oGq1RcM8B0
